"fixed unwanted scrollbar"

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -137,6 +137,6 @@ body {
   padding-top: 30px;
   padding-left: 50px;
   padding-right: 50px;
-  min-height: 100vh;
-  overflow: scroll;
+  height: auto;
+  overflow: auto;
 }
